@@ -5,6 +5,9 @@ PHP                                                                        NEWS
 - Core:
   . Fix GH-14978 (The xmlreader extension phpize build). (Peter Kokot)
 
+- DOM:
+  . Fix trampoline leak in xpath callables. (nielsdos)
+
 - OpenSSL:
   . Bumped minimum required OpenSSL version to 1.1.0. (cmb)
 
@@ -15,6 +18,9 @@ PHP                                                                        NEWS
 
 - Standard:
   . Fix references in request_parse_body() options array. (nielsdos)
+
+- XSL:
+  . Fix trampoline leak in xpath callables. (nielsdos)
 
 18 Jul 2024, PHP 8.4.0alpha2
 
